After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706738 - My VM is not a laptop
My VM is not a laptop
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Color
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-25 08:08 UTC by drago01
Modified: 2013-08-27 10:50 UTC
See Also:
GNOME target: 3.10
GNOME version: ---



Description drago01 2013-08-25 08:08:41 UTC
The color panel shows "Laptop Screen  .... not calibrated"  when running inside a VM. This makes no sense because tnere is no laptop screen.
Comment 1 Richard Hughes 2013-08-27 08:31:41 UTC
Which GNOME release are you testing? Are you using virtual box or KVM etc?
Comment 2 drago01 2013-08-27 08:33:42 UTC
(In reply to comment #1)
> Which GNOME release are you testing? Are you using virtual box or KVM etc?

3.9.90 ... F20 running inside virt-manager (qemu-kvm).
Comment 3 Richard Hughes 2013-08-27 09:02:01 UTC
Can you attach the output of "xrandr" when in the VM please. We use the gnome_rr_output_is_builtin_display() functionality to work out if the panel is built-in, and it's possible the virtual display has some crappy name like "lvds" or "default".

On a bigger point, does it even make sense to show virtual hardware from a color managed point of view? I suspect I might get bugreports if it was just hidden.
Comment 4 drago01 2013-08-27 09:19:17 UTC
(In reply to comment #3)
> Can you attach the output of "xrandr" when in the VM please. We use the
> gnome_rr_output_is_builtin_display() functionality to work out if the panel is
> built-in, and it's possible the virtual display has some crappy name like
> "lvds" or "default".

http://paste.fedoraproject.org/35043/75949761/

This happens when I use the "VMVGA" video card (using that because of #706735). Setting it to the default (QXL) works (i.e shows "QXL Screen 1").

But anyway why would "default" imply laptop if the device itself is not a laptop? That heuristic seems broken to me.

> On a bigger point, does it even make sense to show virtual hardware from a
> color managed point of view? I suspect I might get bugreports if it was just
> hidden.

That's a good point. For virtual hardware probably not. But you can use real hardware in a VM so just checking whether it is running in a VM is not good enough.
Comment 5 Richard Hughes 2013-08-27 10:50:55 UTC
I've pushed this to libgnome-desktop:

commit 97f24ab849e7773053574d29592eb52cce892d33
Author: Richard Hughes <richard@hughsie.com>
Date:   Tue Aug 27 11:45:57 2013 +0100

    GnomeRR: Do not assume outputs with the id of 'default' are built-in
    
    We are using this in all kinds of places to work out if a display is embedded
    (like a laptop display) and cannot be removed. Some of the binary drivers do
    not set a sensible ID, but it's not more sane to assume these default values are
    either for internal or external panels. Assuming the former breaks VMVGA in
    virtual machines. We should not return TRUE when there is no heuristic to use.
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=706738