libgnome-desktop/gnome-rr.c
@@ -1476,8 +1476,7 @@ _gnome_rr_output_name_is_builtin_display (const char *name)
 	strstr (name, "LVDS") ||
 	strstr (name, "Lvds") ||
 	strstr (name, "LCD")  ||  /* ... but fglrx uses "LCD" in some versions.  Shoot me now, kthxbye. */
-	strstr (name, "eDP")  ||  /* eDP is for internal built-in panel connections */
-	strstr (name, "default")) /* Finally, NVidia and all others that don't bother to do RANDR properly */
+	strstr (name, "eDP"))     /* eDP is for internal built-in panel connections */
         return TRUE;
 
     return FALSE;
